Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29811

Visual glitch at startup: Example thumbnails are displayed heavily-cropped for a brief moment

XMLWordPrintable

    • bc250d9cf (12.0)

      Probably related to Qt Creator 12's faster startup procedure

       

      Steps to reproduce

      1. On the Welcome screen, show the "Examples" page
      2. Enable "File" > "Sessions" > "Manage" > "Restore last session on startup"
      3. Switch to "Edit" mode
      4. Close and restart Qt Creator

        For Gerrit Dashboard: QTCREATORBUG-29811
        # Subject Branch Project Status CR V

            portale Alessandro Portale
            skoh-qt Sze Howe Koh
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes