QtSupport: Don't show semi laid out examples while updating

This hides the examples SectionedGridView while the examples.xml files
are loaded. When shown, they are directly in the full size.

An additional benefit lies in the initial loading of less thumbnail
images because with QTCREATORBUG-29811, many more thumbnails were
visible in the initial view than now.

Fixes: QTCREATORBUG-29811
Change-Id: I42f362497859b0b98dc48ef0f1b6399d91c0db28
Reviewed-by: Eike Ziller <eike.ziller@qt.io>